--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -594,11 +594,11 @@ div.WordSection1
 
 <p class=MsoNormal><span lang=EN-US><o:p>&nbsp;</o:p></span></p>
 
-<p class=MsoNormal><span lang=EN-US>Mechat Privacy Policy</span></p>
+<p class=MsoNormal><span lang=EN-US>SoulMate Privacy Policy</span></p>
 
 <p class=MsoNormal><span lang=EN-US><o:p>&nbsp;</o:p></span></p>
 
-<p class=MsoNormal><span lang=EN-US>Mechat is well aware of the importance of
+<p class=MsoNormal><span lang=EN-US>SoulMate is well aware of the importance of
 personal information to you and will do our best to protect your information.
 In view of this, we have formulated this policy (hereinafter referred to as
 &quot;this policy&quot;) and remind you:</span></p>
