--- a/support.html
+++ b/support.html
@@ -600,7 +600,7 @@ div.WordSection1
 
 <div class=WordSection1 style='layout-grid:15.6pt'>
 
-<p class=MsoNormal><span class=SpellE><b><span lang=EN-US>Mechat</span></b></span><b><span
+<p class=MsoNormal><span class=SpellE><b><span lang=EN-US>SoulMate</span></b></span><b><span
 lang=EN-US> Support<o:p></o:p></span></b></p>
 
 <p class=MsoNormal><span lang=EN-US><o:p>&nbsp;</o:p></span></p>
